unpackaged/main/default/objects/Account/fields/Digital_Marketer__c.field-meta.xml
<CustomField>
    <fullName>Digital_Marketer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this client a digital marketer?</description>
    <label>Digital Marketer?</label>
    <type>Checkbox</type>
</CustomField>