unpackaged/main/default/objects/Account/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that designates whether this account is a partner.</description>
    <label>Partner?</label>
    <type>Checkbox</type>
</CustomField>