unpackaged/main/default/objects/Account/fields/Upsell__c.field-meta.xml
<CustomField>
    <fullName>Upsell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this account upsold?</description>
    <label>Upsell?</label>
    <type>Checkbox</type>
</CustomField>