unpackaged/main/default/objects/Account/fields/X2023_renewal__c.field-meta.xml
<CustomField>
    <fullName>X2023_renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>will this account renew?</description>
    <label>2023 renewal?</label>
    <type>Checkbox</type>
</CustomField>